some cleanup improvements and stuff

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>Advanced React Hooks 🔥</title>
+    <title>React Performance ⚡</title>
   </head>
 
   <body>
